Add K Means Notebook and visuals

--- a/notebooks/MGT665 Defect Data Apriori_FINAL.ipynb
+++ b/notebooks/MGT665 Defect Data Apriori_FINAL.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "288edca0",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "95742659",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d2e72c9c",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔢 Data Info:\n",
+      "Data Info:\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 1000 entries, 0 to 999\n",
       "Data columns (total 8 columns):\n",
@@ -230,7 +230,7 @@
       "memory usage: 62.6+ KB\n",
       "None\n",
       "\n",
-      "📊 Class Distribution in 'severity':\n",
+      " Class Distribution in 'severity':\n",
       "severity\n",
       "Minor       0.358\n",
       "Critical    0.333\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "190774f6",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📉 Summary of Missing Values (by Column):\n",
+      "Summary of Missing Values (by Column):\n",
       "defect_id            0\n",
       "product_id           0\n",
       "defect_type          0\n",
@@ -804,23 +804,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44</th>\n",
-       "      <td>(severity_Minor)</td>\n",
-       "      <td>(inspection_method_Manual Testing)</td>\n",
-       "      <td>0.358</td>\n",
-       "      <td>0.352</td>\n",
-       "      <td>0.135</td>\n",
-       "      <td>0.377095</td>\n",
-       "      <td>1.071293</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.008984</td>\n",
-       "      <td>1.040287</td>\n",
-       "      <td>0.103658</td>\n",
-       "      <td>0.234783</td>\n",
-       "      <td>0.038727</td>\n",
-       "      <td>0.380309</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
        "      <td>(inspection_method_Manual Testing)</td>\n",
        "      <td>(severity_Minor)</td>\n",
        "      <td>0.352</td>\n",
@@ -836,6 +819,23 @@
        "      <td>0.039755</td>\n",
        "      <td>0.380309</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>(severity_Minor)</td>\n",
+       "      <td>(inspection_method_Manual Testing)</td>\n",
+       "      <td>0.358</td>\n",
+       "      <td>0.352</td>\n",
+       "      <td>0.135</td>\n",
+       "      <td>0.377095</td>\n",
+       "      <td>1.071293</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.008984</td>\n",
+       "      <td>1.040287</td>\n",
+       "      <td>0.103658</td>\n",
+       "      <td>0.234783</td>\n",
+       "      <td>0.038727</td>\n",
+       "      <td>0.380309</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -846,32 +846,32 @@
        "19            (defect_type_Structural)                       (severity_Minor)   \n",
        "47                 (severity_Moderate)  (inspection_method_Visual Inspection)   \n",
        "0               (defect_type_Cosmetic)              (defect_location_Surface)   \n",
-       "44                    (severity_Minor)     (inspection_method_Manual Testing)   \n",
-       "45  (inspection_method_Manual Testing)                       (severity_Minor)   \n",
+       "44  (inspection_method_Manual Testing)                       (severity_Minor)   \n",
+       "45                    (severity_Minor)     (inspection_method_Manual Testing)   \n",
        "\n",
        "    antecedent support  consequent support  support  confidence      lift  \\\n",
        "18               0.358               0.352    0.139    0.388268  1.103035   \n",
        "19               0.352               0.358    0.139    0.394886  1.103035   \n",
        "47               0.309               0.351    0.119    0.385113  1.097189   \n",
        "0                0.309               0.353    0.117    0.378641  1.072637   \n",
-       "44               0.358               0.352    0.135    0.377095  1.071293   \n",
-       "45               0.352               0.358    0.135    0.383523  1.071293   \n",
+       "44               0.352               0.358    0.135    0.383523  1.071293   \n",
+       "45               0.358               0.352    0.135    0.377095  1.071293   \n",
        "\n",
        "    representativity  leverage  conviction  zhangs_metric   jaccard  \\\n",
        "18               1.0  0.012984    1.059288       0.145499  0.243433   \n",
        "19               1.0  0.012984    1.060958       0.144151  0.243433   \n",
        "47               1.0  0.010541    1.055479       0.128191  0.219963   \n",
        "0                1.0  0.007923    1.041266       0.098000  0.214679   \n",
-       "44               1.0  0.008984    1.040287       0.103658  0.234783   \n",
-       "45               1.0  0.008984    1.041401       0.102698  0.234783   \n",
+       "44               1.0  0.008984    1.041401       0.102698  0.234783   \n",
+       "45               1.0  0.008984    1.040287       0.103658  0.234783   \n",
        "\n",
        "    certainty  kulczynski  \n",
        "18   0.055969    0.391577  \n",
        "19   0.057455    0.391577  \n",
        "47   0.052563    0.362072  \n",
        "0    0.039630    0.355043  \n",
-       "44   0.038727    0.380309  \n",
-       "45   0.039755    0.380309  "
+       "44   0.039755    0.380309  \n",
+       "45   0.038727    0.380309  "
       ]
      },
      "metadata": {},
@@ -911,6 +911,7 @@
     "plt.title('Top 10 Frequent Itemsets by Support')\n",
     "plt.xlabel('Support')\n",
     "plt.ylabel('Itemsets')\n",
+    "frequent_itemsets_sorted['itemsets'] = frequent_itemsets_sorted['itemsets'].apply(lambda x: ', '.join(list(x)))\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
